<resources>
    <string name="app_name">Payment Initiation</string>
    <string name="transaction_type">Transaction type</string>
    <string name="request_type">Request type</string>
    <string name="overall_status">All transactions approved</string>
    <string name="outcome">Outcome</string>
    <string name="outcome_message">Outcome message</string>
    <string name="failure_reason">Failure reason</string>
    <string name="payment_app_used">Payment service used</string>
    <string name="num_transactions">Number of transactions</string>
    <string name="transaction_id">Transaction id</string>
    <string name="transaction_status">Transaction status</string>
    <string name="response_code">Response code</string>
    <string name="amount_charged">Amount charged</string>
    <string name="payment_type">Payment method</string>
    <string name="card_used">Card used</string>
    <string name="card_used_value">%1$s %2$s %3$s</string>
    <string name="customer">Customer</string>
    <string name="transaction_type_sale">Sale</string>
    <string name="transaction_type_refund">Refund</string>
    <string name="transaction_type_reversal">Reversal</string>
    <string name="transaction_type_preauthorisation">Pre-authorisation</string>
    <string name="transaction_type_preauthcompletion">Completion</string>
    <string name="close">Close</string>
    <string name="transactions_performed">Transactions performed</string>
    <string name="payment_result">Payment flow completed</string>
    <string name="payment_error_result">Payment error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="check_split">Split</string>
    <string name="total">Total</string>
    <string name="title_status">%1$s &#8212; Status: %2$s &#8212; Failure: %3$s</string>
    <string name="title_customer">%1$s</string>
    <string name="no_customer_name">No customer used</string>
    <string name="record_title">Transaction record</string>
    <string name="title_select_payment_service">Select a payment service</string>
    <string name="title_select_flow_service">Select a flow service</string>
    <string name="title_select_device">Connected devices</string>
    <string name="remove">Remove choice</string>
    <string name="pay">PAY</string>
    <string name="choose_api_function">Choose API function</string>
    <string name="na">N/A</string>
    <string name="no_devices_found">No connected devices were found</string>
    <string name="no_flow_services_found">No flow services were found</string>
    <string name="no_payment_services_found">No payment services were found</string>
    <string name="service_label_id">Id</string>
    <string name="service_label_vendor">Vendor</string>
    <string name="service_label_app_version">Application Version</string>
    <string name="service_label_api_version">API Version</string>
    <string name="service_label_payment_methods">Payment methods</string>
    <string name="service_label_flow_types">Flow types</string>
    <string name="service_label_flow_info">Defined in flows</string>
    <string name="service_label_request_types">Custom request types</string>
    <string name="service_label_currencies">Currencies</string>
    <string name="service_label_transaction_types">Transaction types</string>
    <string name="service_label_accessible_mode">Accessibility mode supported</string>
    <string name="service_label_supported_data_keys">Supported data keys</string>
    <string name="ps_label_terminal_id">Terminal Id</string>
    <string name="ps_label_merchant_ids">Merchant Ids</string>
    <string name="ps_label_default_currency">Default currency</string>
    <string name="ps_label_manual_entry">Allows manual entry</string>
    <string name="ps_label_print_receipts">Will print receipts</string>
    <string name="ps_label_card_reading">Supports flow card reading</string>
    <string name="fs_label_stages">Flow stages</string>
    <string name="fs_label_req_card_token">Requires card token</string>
    <string name="fs_label_can_adjust_amounts">Can adjust amounts</string>
    <string name="fs_label_can_pay_amounts">Can pay amounts</string>
    <string name="initiate_payment">Initiate payment</string>
    <string name="process_request">Process request</string>
    <string name="choose_a_transaction_type">Choose a transaction type</string>
    <string name="choose_a_currency">Choose a currency</string>
    <string name="add_basket_or_configure_manual_amounts">Add basket or select amounts</string>
    <string name="add_basket">Add basket</string>
    <string name="additional_settings">Additional settings</string>
    <string name="add_customer">Add customer</string>
    <string name="add_card_token">Add card token</string>
    <string name="enable_split">Enable split</string>
    <string name="system_overview_header_flow_configs">Flow configs (click for details)</string>
    <string name="system_overview_header_fps_settings">Fps Settings</string>
    <string name="system_info_label_api_version">Payment Initiation API version</string>
    <string name="system_info_label_fps_version">Flow Processing Service version</string>
    <string name="system_info_label_num_flow_services">Number of payment flow services</string>
    <string name="system_info_label_num_devices">Number of connected devices</string>
    <string name="system_info_label_flow_names">%1$s</string>
    <string name="system_info_label_all_request_types">Custom request types</string>
    <string name="system_info_label_all_currencies">All supported currencies</string>
    <string name="system_info_label_all_payment_methods">All supported payment methods</string>
    <string name="system_info_label_all_data_keys">All supported data keys</string>
    <string name="system_overview">System overview</string>
    <string name="initiate_request">Initiate request</string>
    <string name="choose_a_request_type">Choose request type</string>
    <string name="generic_result">Generic flow outcome</string>
    <string name="or">or</string>
    <string name="system_events">System events</string>
    <string name="no_events">No events received. Try changing some FPS setting/flow apps.</string>
    <string name="seconds">\u0020seconds</string>
    <string name="split_response_timeout">Split response timeout</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="multi_device">Multi-device enabled</string>
    <string name="split_support">Spli</string>
    <string name="currency_change">Allow currency conversion</string>
    <string name="payment_response_timeout">Payment response timeout</string>
    <string name="flow_response_timeout">Flow response timeout</string>
    <string name="merchant_selection_timeout">Merchant selection timeout</string>
    <string name="status_update_timeout">Status update timeout</string>
    <string name="abort_on_flow_app_error">Abort on flow app error</string>
    <string name="abort_on_payment_app_error">Abort on payment app error</string>
    <string name="filter_services_by_flow_type">Filter services by flow type</string>
    <string name="always_allow_preflow">Always allow PRE_FLOW</string>
    <string name="enable_legacy_pas">Enable legacy payment apps</string>
    <string name="request_stages">Request stages</string>
    <string name="flow_config">Flow config</string>
    <string name="system_settings">System settings</string>
    <string name="merchant_settings">Merchant settings</string>
    <string name="flow_configurations">Flow configurations</string>
    <string name="there_are_no_payment_services_available_on_this_device_please_install_enable_one_and_try_again">There
        are no flows and/or flow services available on this device. Please install relevant apps and try again.
    </string>
    <string name="setup_model">Configure</string>
    <string name="initiation_help">Unlike the generic (non-payment) requests which involves calling a single app and getting
        a response back, the Payment scenarios are a bit more involved. Each flow type has an associated flow,
        which consists of one to many stages during which applications may be called to read and/or augment transaction
        data.\n\nPayment initiation is the step where the Payment model is created and subsequently sent off for
        processing via the PaymentClient. Once the payment has been sent off, the processing service will map the
        flow type to an appropriate flow and execute it, calling any defined apps along the way.\n\nIn these
        samples, we mainly support the sale flow, which can be viewed by pressing the flow stages icon in the
        toolbar.Payment initiation is typically handled by a POS application, where the merchant/operator inputs
        customer basket items or manual purchase amounts.\n\n
    </string>
    <string name="generic_initiation_help">The generic request and response models are designed to support virtually any
        use case and scenario. Unlike the payment models, these models are not well-defined in code but rather
        via sets of data definitions in the documentation. Each request type, such as reversal or tokenisation will have
        its own set of data definitions. There are various sources of generic request types, data definitions and flows.
        AEVI defines a base set of common scenarios via the documentation, acquirers may have bespoke scenarios, flow services
        may advertise support for custom request types and last but not least there are status updates which is a special type
        of generic flows.\n\n
    </string>
    <string name="choose_a_transaction_flow">Choose a payment flow</string>
    <string name="receipts_redeliver">Redeliver</string>
    <string name="receipts_cash">Cash Receipt</string>
    <string name="choose_sub_type">Choose a sub type for %1$s</string>
    <string name="request_accepted">Request accepted by FPS</string>
    <string name="please_complete_payment_first">Please complete a successful payment before using this request type</string>
    <string name="payment_data">Payment data</string>
    <string name="request_data">Request data</string>
</resources>