<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/settings_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="@style/DialogTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:text="@string/system_settings"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/settings_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/merchant_settings"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/settings_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/settings_request_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flow_configurations"
                android:textSize="22sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>